CSS/NavigationBar.css
#nav-container {
  position: fixed;
  width: 100%;
  z-index: 500;
  top: 0;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 20px;
  width: 100%;
  background-color: var(--dark-color);
  height: 80px;
  justify-content: flex-end;
  box-shadow: rgba(0, 0, 0, 0.58) 0px 4px 20px;
}

.logo {
  position: absolute;
  display: flex;
  align-items: center;
  color: white;
  font-size: 35px;
  font-weight: bold;
  line-height: 80px;
  padding: 0 80px;
  cursor: pointer;
}
.logo img {
  margin-bottom: 10px;
}

nav ul {
  float: right;
  margin-right: 20px;
}

nav ul li {
  display: inline-block;
  line-height: 80px;
  margin: 0 5px;
}

nav ul li a {
  color: white;
  font-size: 15px;
  padding: 7px 13px;
  border-radius: 15px;
  text-transform: uppercase;
  transition: 0.3s ease-in;
}

#user-profile-icon {
  display: inline-block;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  background-image: url("/Images/tantawy.jpeg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  border-width: 10px;
  background-color: var(--Green-color);
}

#check {
  float: right;
  display: none;
}

#menu {
  float: right;
  display: none;
  color: white;
  font-size: 40px;
  line-height: 80px;
  margin-right: 40px;
  cursor: pointer;
  transition: transform 0.3s ease;
}

nav ul li a.active,
nav ul li a:hover {
  background-color: var(--Green-color);
  transition: 0.75s;
}

.logo:hover {
  transform: translateY(-10px);
  transition: all 0.7s;
}

@media (max-width: 1250px) {
  #menu {
    display: block;
    transition: all 0.5s;
  }

  nav ul {
    position: absolute;
    width: 50%;
    height: 63vh;
    min-height: 600px;
    background: var(--dark-color);
    text-align: center;
    top: -1000%;
    right: 0%;
    border-radius: 0px 0px 15px 15px;
    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
      rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
    transition: all 0.5s;
    z-index: 5;
  }

  nav ul li {
    display: block;
  }

  nav ul li a {
    font-size: 20px;
  }

  #check:checked ~ ul {
    top: 75px;
  }
}

@media (max-width: 420px) {
  .logo {
    padding: 20px 80px;
  }
  nav ul li a {
    font-size: 15px;
  }
  #website-name {
    display: none;
  }
}

